tests/snapshots/run_wpt_conformance__litert_exp_float16_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "exp.https.any.js",
    "exp float16 4D tensor",
    "litert",
    "PASS",
)
