tests/snapshots/run_wpt_conformance__litert_exp_float32_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "exp.https.any.js",
    "exp float32 0D scalar",
    "litert",
    "PASS",
)
